<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:elevation="8dp"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />
            </android.support.design.widget.AppBarLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/margin_high"
                android:paddingLeft="@dimen/margin_high"
                android:paddingRight="@dimen/margin_high"
                android:paddingTop="@dimen/margin_high">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/assignActionButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/assign_action_btn" />

                        <Button
                            android:id="@+id/trackUserOnMapButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/track_user_on_map_btn"/>

                        <Button
                            android:id="@+id/completeActionButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/complete_action_btn" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#88FFFFFF"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>