<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_high"
    android:paddingLeft="@dimen/margin_high"
    android:paddingRight="@dimen/margin_high"
    android:paddingTop="@dimen/margin_high">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xxxhigh"
        android:layout_marginTop="@dimen/margin_xxxhigh"
        android:gravity="center"
        android:text="@string/login_screen_header"
        android:textSize="@dimen/text_size_large"
        android:visibility="gone"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login.name_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/login.name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_name_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login.phone_number_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_base"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/login.phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_phone_number_hint"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:errorEnabled="true">

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email Address" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_adhar_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/login_adhar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Adhar Number" />
    </android.support.design.widget.TextInputLayout>




    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_high"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">

        <FrameLayout
            android:id="@+id/login.driver_login_btn_layout"
            android:layout_width="wrap_content"
            android:layout_height="48dp">

            <LinearLayout
                android:id="@+id/login.driver_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_base"
                android:paddingRight="@dimen/padding_base"
                android:background="@color/colorPrimary"
                android:onClick="onLoginButtonClick"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/margin_high"
                    android:layout_marginRight="@dimen/margin_high"
                    android:layout_marginTop="@dimen/margin_base"
                    android:layout_marginBottom="@dimen/margin_base"
                    android:text="@string/login_button_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_medium"
                    android:textAllCaps="true"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login.user_login_btn_loader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="true"
                android:background="#55FFFFFF"
                android:padding="@dimen/padding_base"
                android:visibility="gone">

                <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="true"
                    android:progressTint="#FFFFFF" />
            </LinearLayout>
        </FrameLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>